objects/Score__c.object
<CustomObject>
    <fields>
        <fullName>Option__c</fullName>
        <label>Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subject1_Marks__c</fullName>
        <label>Subject1 Marks</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Subject2_Marks__c</fullName>
        <label>Subject2 Marks</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Score</label>
    <nameField>
        <label>Score Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>option_selection</fullName>
        <active>true</active>
        <errorConditionFormula>not(if((Name==&apos;ias&apos;),true,false))</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>no cant</errorMessage>
    </validationRules>
</CustomObject>